@@ -21,10 +21,14 @@
 package org.trebol.jpa.services.patch.impl;
 
 import lombok.NoArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 import org.trebol.api.models.ShipperPojo;
+import org.trebol.common.exceptions.BadInputException;
 import org.trebol.jpa.entities.Shipper;
 import org.trebol.jpa.services.patch.ShippersPatchService;
+
+import java.util.Map;
 
 @Service
 @NoArgsConstructor
@@ -32,14 +36,21 @@ public class ShippersPatchServiceImpl
   implements ShippersPatchService {
 
   @Override
-  public Shipper patchExistingEntity(ShipperPojo changes, Shipper existing) {
+  public Shipper patchExistingEntity(Map<String, Object> changes, Shipper existing) throws BadInputException {
     Shipper target = new Shipper(existing);
 
-    String name = changes.getName();
-    if (name != null && !name.isBlank() && !target.getName().equals(name)) {
-      target.setName(name);
+    if (changes.containsKey("name")) {
+      String name = (String) changes.get("name");
+      if (!StringUtils.isBlank(name)) {
+        target.setName(name);
+      }
     }
 
     return target;
+  }
+
+  @Override
+  public Shipper patchExistingEntity(ShipperPojo changes, Shipper existing) throws BadInputException {
+    throw new UnsupportedOperationException("This method has been deprecated");
   }
 }
